Fixed some bugs and improved some things.

--- a/trivia.cfg
+++ b/trivia.cfg
@@ -6,3 +6,4 @@ add_question "In which country is Vienna a city in?" "Austria"
 add_question "In which country is Paris a city in?" "France"
 add_question "In which country is Zagreb a city in?" "Croatia"
 add_question "Which weapon in Teeworlds deals 1 damage per hit?" "Gun"
+connect localhost
