--- a/trivia.cfg
+++ b/trivia.cfg
@@ -8,7 +8,7 @@ add_question "In which country is Zagreb a city in?" "Croatia"
 add_question "Which weapon in Teeworlds deals 1 damage per hit?" "Gun"
 add_question "Which programming language is Teeworlds mostly written in? "C++"
 add_question "Which famous author wrote short stories such as 'The Tell-Tale Heart'?" "Edgar Allan Poe"
-add_question "What operating system is used the most around the world?" "Windows"
+add_question "What computer operating system is used the most around the world?" "Windows"
 add_question "What newer phone operating system is open-source and runs on the linux kernel?" "Android"
 add_question "Where is the Teeworlds project source code hosted?" "github"
 add_question "If x=5, y=7, and z=2, then (x+y)/z = ?" "6"
