--- a/trivia.cfg
+++ b/trivia.cfg
@@ -1,3 +1,4 @@
+connect 62.75.191.155:8360
 add_question "What's the name of englands queen?" "Queen Elizabeth"
 add_question "How many states are in the United States?" "50"
 add_question "Which state is also known as the Sunshine State?" "Florida"
